@@ -13,7 +13,9 @@ our %build_reqs = (
     'perl-ExtUtils-PkgConfig' => '1.03',
     'perl-Glib'               => '1.180', # for Glib::MakeHelper
     'perl-Gtk2'               => '1.140', # for Gtk2::Pango
-    'perl-Cairo'              => '1.00',
+    'perl-Cairo'              => '1.00',  # for the Cairo typemaps and
+                                          # for ClutterCairo
+    'perl-GStreamer'          => 0,
     'Clutter'                 => '0.8.0',
 );
 
@@ -35,6 +37,7 @@ unless (eval "use ExtUtils::Depends '$build_reqs{'perl-ExtUtils-Depends'}';"
          PREREQ_FATAL => 1,
          PREREQ_PM    => {
             'Glib'                => $build_reqs{'perl-Glib'},
+            'Gtk2'                => $build_reqs{'perl-Gtk2'},
             'Cairo'               => $build_reqs{'perl-Cairo'},
             'ExtUtils::Depends'   => $build_reqs{'perl-ExtUtils-Depends'},
             'ExtUtils::PkgConfig' => $build_reqs{'perl-ExtUtils-PkgConfig'},
@@ -124,7 +127,7 @@ our %pm_files = (
 );
 
 our %pod_files = (
-    'Clutter.pm'   => '$(INST_MAN3DIR)/Clutter.$(MAN3EXT)',
+    'Clutter.pm' => '$(INST_MAN3DIR)/Clutter.$(MAN3EXT)',
 
     # Keysyms.pm is generated by Makefile.PL
     'build/Keysyms.pm' => '$(INST_MAN3DIR)/Clutter::Keysyms.$(MAN3EXT)',
@@ -169,12 +172,27 @@ $clutter->install(qw(clutterperl.h build/clutterperl-autogen.h));
 $clutter->save_config('build/IFiles.pm');
 
 WriteMakefile(
+    AUTHOR        => 'Emmanuele Bassi <ebassi@openedhand.com>',
     NAME          => 'Clutter',
     VERSION_FROM  => 'Clutter.pm', # finds $VERSION
-    PREREQ_PM     => {}, # e.g., Module::Name => 1.1
+    PREREQ_PM     => {
+        'Cairo'     => $build_reqs{'perl-Cairo'},
+        'Glib'      => $build_reqs{'perl-Glib'},
+        'Gtk2'      => $build_reqs{'perl-Gtk2'},
+        'GStreamer' => 0,
+    },
+    PREREQ_FATAL  => 1, # we need Glib and Gtk2 to be
+                        # able to write the Makefile
     ABSTRACT_FROM => 'Clutter.pm', # retrieve abstract from module
-    XSPROTOARG    => '-noprototypes',
+    XSPROTOARG    => '-noprototypes ',
     MAN3PODS	  => \%pod_files,
+    LICENSE       => 'perl, lgpl',
+    EXTRA_META    => Glib::MakeHelper->get_configure_requires_yaml(
+        'ExtUtils::Depends'   => $build_reqs{'perl-ExtUtils-Depends'},
+        'ExtUtils::PkgConfig' => $build_reqs{'perl-ExtUtils-PkgConfig'},
+        'Glib'                => $build_reqs{'perl-Glib'},
+        'Gtk2'                => $build_reqs{'perl-Gtk2'},
+    ),
     $clutter->get_makefile_vars(),
 );
 
@@ -198,16 +216,8 @@ sub MY::postamble
 {
     return Glib::MakeHelper->postamble_clean()
          . Glib::MakeHelper->postamble_docs_full(
-            DEPENDS => $clutter,
-            DOCTYPES => 'doctypes',
-            COPYRIGHT_FROM => 'copyright.pod',
-           )
-         . Glib::MakeHelper->postamble_rpms(
-            'CLUTTER' => $build_reqs{'Clutter'},
-            'PERL_EXTUTILS_DEPENDS' => $build_reqs{'perl-ExtUtils-Depends'},
-            'PERL_EXTUTILS_PKGCONFIG' => $build_reqs{'perl-ExtUtils-PkgConfig'},
-            'PERL_GLIB' => $build_reqs{'perl-Glib'},
-            'PERL_CAIRO' => $build_reqs{'perl-Cairo'},
-            'PERL_GTK2' => $build_reqs{'perl-Gtk2'},
+               DEPENDS => $clutter,
+               DOCTYPES => 'doctypes',
+               COPYRIGHT_FROM => 'copyright.pod',
            );
 }
