@@ -1,3 +1,9 @@
+2008-08-07  Emmanuele Bassi  <ebassi@openedhand.com>
+
+	* Makefile.PL: Update the WriteMakefile() parameters so that
+	the META.yml that MakeMaker generates is finally useful. Remove
+	the rpms magic from the postamble.
+
 ======== Clutter 0.801 =======================================================
 2008-07-22  Emmanuele Bassi  <ebassi@openedhand.com>
 
